# Smart-Docs-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
da-ta/: chat_history.sqlite3
da-ta/vector_store/: chroma.sqlite3
data/texts/: it_security_manual.txt  leave_policy.txt  q3_financial_report.txt
data/vector_store/: chroma.sqlite3
data/vector_store/f15c34e6-b90e-43bc-a265-31960ad9138d/: index_metadata.pickle
data/vector_store/fd445259-e440-4cdd-b90d-5cbf1d850737/: index_metadata.pickle
notebook/: docs.ipynb
scripts/: eval_rag.py
smart_docs/: __init__.py  agent.py  api.py  chat_store.py  config.py  rag.py  schemas.py  tools.py
