[project]
name = "smart-docs-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "onnxruntime==1.23.2",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.116.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.41.0",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.35.0",
]
